--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 		<link rel="stylesheet" href="css/style.css">
 		<title>TODO React</title>
 	</head>
 	<body>
-        
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/main.js"></script>
-
+        <div class="root"></div>
+        <script src="js/jquery-3.2.1.min.js"></script>
+        <script src="js/components/Header.js"></script>
+        <script src="js/components/Todo.js"></script>
+        <script src="js/index.js"></script>
 	</body>
 </html>
